--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,20 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: black;
+  border-radius: 25px;
+  padding: 20px;
+}
+.App-treeView{
+  background-color: #ffffff;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: black;
+  border-radius: 25px;
+  padding: 20px;
 }
 .App-link {
   color: #61dafb;
